Opened 15 years ago
Closed 15 years ago
#4712 closed bug (fixed)
[Haiku3d] does not close when "Close All" is selected from Deskbar menu
Reported by: | mpanasyuk | Owned by: | aldeck |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Haiku R1/alpha1 (Revision 32975)
Change History (4)
comment:1 by , 15 years ago
Component: | - General → Applications |
---|
comment:2 by , 15 years ago
Owner: | changed from | to
---|
comment:3 by , 15 years ago
Status: | new → assigned |
---|
comment:4 by , 15 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
Note:
See TracTickets
for help on using tickets.
fixed in hrev33474