* Fixed closing via deskbar's close all. The problem was that i forgot to define the app_flags in the rdef, case that isn't well handled apparently when creating a BMessenger targeting the app. Thanks to Michael and Rene for helping! Fixes #4712

* Removed unneeded and faulty App::MessageReceived and a strange (probably
 copy pasted then forgotten) MainWindow::QuitRequested.
* Minor changes. Made App destructor virtual, moved init into ReadyToRun,
 fixed a few style violations.


git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@33474 a95241bf-73f2-0310-859d-f6bbb57e9c96